# nameko-vault

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  pipelinit.python.format.yaml  pipelinit.python.lint.yaml  pipelinit.python.test.yaml
nameko_vault/: __init__.py
tests/: tests_provider.py
