[tool.poetry]
name = "nameko-vault"
version = "0.1.0"
description = "A Nameko extension to provide connection with Vault"
authors = ["Instruct Developers <contato@instruct.com.br>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/instruct-br/nameko-vault"
repository = "https://github.com/instruct-br/nameko-vault"
keywords = ["nameko", "vault"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"
nameko = "^2.12.0"
hvac = "^0.10.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
